@@ -1802,6 +1802,11 @@ else
         Z_XCFLAGS="$Z_XCFLAGS -DNO_ASM"
         ;;
 
+      # Hurd/x86_64
+      gnu*--x86_64)
+        Z_XCFLAGS="$Z_XCFLAGS -DNO_ASM"
+        ;;
+
       # FreeBSD/x86_64
       freebsd*--x86_64)
         Z_XCFLAGS="$Z_XCFLAGS -DNO_ASM"
